compiler/typ/tests/fixtures/diagnostics/0853_polyvar_branch_result_mismatch_10.ml.infer.expected
File "0853_polyvar_branch_result_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0853_polyvar_branch_result_mismatch_10 is not a valid module name.

File "0853_polyvar_branch_result_mismatch_10.ml", line 3, characters 21-22:
3 |   | `B (y : bool) -> y
                         ^
Error: The value y has type bool but an expression was expected of type int
